[gd_scene load_steps=20 format=3 uid="uid://cwx57kfwdwcxq"]

[ext_resource type="Script" path="res://interface/checkpoint/StatusMenu.gd" id="1_w3e60"]
[ext_resource type="Texture2D" uid="uid://crgdx5iqxvvjn" path="res://Assets/GUI/GUI_1x.png" id="2_kge5o"]
[ext_resource type="Texture2D" uid="uid://nit4dw0rc4fa" path="res://Assets/GUI/Sliced/GUI_2x_sliced.png" id="3_txgda"]
[ext_resource type="Texture2D" uid="uid://bbfdlabvty13h" path="res://Assets/Buttons/buttons_2x.png" id="4_ug75h"]

[sub_resource type="Theme" id="Theme_d1i7a"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_4nnxg"]
content_margin_left = 10.0
content_margin_top = 10.0
content_margin_right = 10.0
content_margin_bottom = 10.0
texture = ExtResource("2_kge5o")
texture_margin_left = 3.0
texture_margin_top = 3.0
texture_margin_right = 3.0
texture_margin_bottom = 3.0
region_rect = Rect2(96, 0, 24, 24)

[sub_resource type="Theme" id="Theme_kuhi0"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_u6uf2"]
texture = ExtResource("2_kge5o")
texture_margin_left = 9.0
texture_margin_top = 9.0
texture_margin_right = 9.0
texture_margin_bottom = 9.0
region_rect = Rect2(32, 56, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_r5xue"]
atlas = ExtResource("3_txgda")
region = Rect2(72, 290, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_yneui"]
atlas = ExtResource("3_txgda")
region = Rect2(20, 290, 12, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_0m7yg"]
atlas = ExtResource("3_txgda")
region = Rect2(2, 290, 12, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_5b1u4"]
atlas = ExtResource("3_txgda")
region = Rect2(0, 272, 16, 16)
margin = Rect2(2, 2, 3, 3)

[sub_resource type="AtlasTexture" id="AtlasTexture_tf8la"]
atlas = ExtResource("4_ug75h")
region = Rect2(210, 18, 8, 12)

[sub_resource type="AtlasTexture" id="AtlasTexture_507ia"]
atlas = ExtResource("4_ug75h")
region = Rect2(211, 18, 8, 11)

[sub_resource type="AtlasTexture" id="AtlasTexture_2wnuv"]
atlas = ExtResource("4_ug75h")
region = Rect2(198, 18, 8, 12)

[sub_resource type="AtlasTexture" id="AtlasTexture_b0tfx"]
atlas = ExtResource("4_ug75h")
region = Rect2(198, 18, 7, 11)

[sub_resource type="AtlasTexture" id="AtlasTexture_0b34j"]
atlas = ExtResource("3_txgda")
region = Rect2(56, 272, 12, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_g1xsj"]
atlas = ExtResource("3_txgda")
region = Rect2(19, 272, 15, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_nu8xg"]
atlas = ExtResource("3_txgda")
region = Rect2(36, 272, 16, 16)

[node name="StatusMenu" type="Control"]
layout_mode = 3
anchors_preset = 0
offset_right = 262.0
offset_bottom = 303.0
script = ExtResource("1_w3e60")

[node name="Background" type="Panel" parent="."]
texture_filter = 1
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = SubResource("Theme_d1i7a")
theme_override_styles/panel = SubResource("StyleBoxTexture_4nnxg")

[node name="Border" type="Panel" parent="."]
texture_filter = 1
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = SubResource("Theme_kuhi0")
theme_override_styles/panel = SubResource("StyleBoxTexture_u6uf2")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -132.0
offset_right = 132.0
offset_bottom = 127.0
grow_horizontal = 2

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer"]
modulate = Color(0, 0, 0, 1)
layout_mode = 2
text = "Level Up
"
horizontal_alignment = 1

[node name="HBoxContainer3" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="LevelIcon" type="TextureRect" parent="MarginContainer/VBoxContainer/HBoxContainer3"]
layout_mode = 2
texture = SubResource("AtlasTexture_r5xue")
stretch_mode = 5

[node name="Level" type="Label" parent="MarginContainer/VBoxContainer/HBoxContainer3"]
modulate = Color(0, 0, 0, 1)
layout_mode = 2
text = "Level:  "

[node name="HBoxContainer2" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="RunesHeldIcon" type="TextureRect" parent="MarginContainer/VBoxContainer/HBoxContainer2"]
layout_mode = 2
texture = SubResource("AtlasTexture_yneui")
stretch_mode = 5

[node name="RunesHeld" type="Label" parent="MarginContainer/VBoxContainer/HBoxContainer2"]
modulate = Color(0, 0, 0, 1)
layout_mode = 2
text = "Runes held: "

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="RunesNeededIcon" type="TextureRect" parent="MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
texture = SubResource("AtlasTexture_0m7yg")
stretch_mode = 5

[node name="RunesNeeded" type="Label" parent="MarginContainer/VBoxContainer/HBoxContainer"]
modulate = Color(0, 0, 0, 1)
layout_mode = 2
text = "Runes needed:"

[node name="MarginContainer2" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -107.0
offset_top = -172.0
offset_right = 107.0
grow_horizontal = 2
grow_vertical = 0

[node name="VBoxContainer2" type="VBoxContainer" parent="MarginContainer2"]
layout_mode = 2
alignment = 1

[node name="Label5" type="Label" parent="MarginContainer2/VBoxContainer2"]
modulate = Color(0, 0, 0, 1)
layout_mode = 2
text = "Status Points
"
horizontal_alignment = 1

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer2/VBoxContainer2"]
layout_mode = 2
alignment = 1

[node name="HealthIcon" type="TextureRect" parent="MarginContainer2/VBoxContainer2/HBoxContainer"]
texture_filter = 1
layout_mode = 2
texture = SubResource("AtlasTexture_5b1u4")
stretch_mode = 5

[node name="Health" type="Label" parent="MarginContainer2/VBoxContainer2/HBoxContainer"]
modulate = Color(0, 0, 0, 1)
layout_mode = 2
text = "Health:"

[node name="DecreaseHealth" type="TextureButton" parent="MarginContainer2/VBoxContainer2/HBoxContainer"]
texture_filter = 1
layout_mode = 2
texture_normal = SubResource("AtlasTexture_tf8la")
texture_pressed = SubResource("AtlasTexture_507ia")
stretch_mode = 5

[node name="IncreaseHealth" type="TextureButton" parent="MarginContainer2/VBoxContainer2/HBoxContainer"]
layout_mode = 2
texture_normal = SubResource("AtlasTexture_2wnuv")
texture_pressed = SubResource("AtlasTexture_b0tfx")
stretch_mode = 5

[node name="HBoxContainer2" type="HBoxContainer" parent="MarginContainer2/VBoxContainer2"]
layout_mode = 2
alignment = 1

[node name="StaminaIcon" type="TextureRect" parent="MarginContainer2/VBoxContainer2/HBoxContainer2"]
texture_filter = 1
layout_mode = 2
texture = SubResource("AtlasTexture_0b34j")
stretch_mode = 5

[node name="Stamina" type="Label" parent="MarginContainer2/VBoxContainer2/HBoxContainer2"]
modulate = Color(0, 0, 0, 1)
layout_mode = 2
text = "Stamina:"

[node name="DecreaseStamina" type="TextureButton" parent="MarginContainer2/VBoxContainer2/HBoxContainer2"]
texture_filter = 1
layout_mode = 2
texture_normal = SubResource("AtlasTexture_tf8la")
texture_pressed = SubResource("AtlasTexture_507ia")
stretch_mode = 5

[node name="IncreaseStamina" type="TextureButton" parent="MarginContainer2/VBoxContainer2/HBoxContainer2"]
layout_mode = 2
texture_normal = SubResource("AtlasTexture_2wnuv")
texture_pressed = SubResource("AtlasTexture_b0tfx")
stretch_mode = 5

[node name="HBoxContainer3" type="HBoxContainer" parent="MarginContainer2/VBoxContainer2"]
layout_mode = 2
alignment = 1

[node name="ManaIcon" type="TextureRect" parent="MarginContainer2/VBoxContainer2/HBoxContainer3"]
texture_filter = 1
layout_mode = 2
texture = SubResource("AtlasTexture_g1xsj")
stretch_mode = 5

[node name="Mana" type="Label" parent="MarginContainer2/VBoxContainer2/HBoxContainer3"]
modulate = Color(0, 0, 0, 1)
layout_mode = 2
text = "Mana:"

[node name="DecreaseMana" type="TextureButton" parent="MarginContainer2/VBoxContainer2/HBoxContainer3"]
texture_filter = 1
layout_mode = 2
texture_normal = SubResource("AtlasTexture_tf8la")
texture_pressed = SubResource("AtlasTexture_507ia")
stretch_mode = 5

[node name="IncreaseMana" type="TextureButton" parent="MarginContainer2/VBoxContainer2/HBoxContainer3"]
layout_mode = 2
texture_normal = SubResource("AtlasTexture_2wnuv")
texture_pressed = SubResource("AtlasTexture_b0tfx")
stretch_mode = 5

[node name="HBoxContainer4" type="HBoxContainer" parent="MarginContainer2/VBoxContainer2"]
layout_mode = 2
alignment = 1

[node name="PowerIcon" type="TextureRect" parent="MarginContainer2/VBoxContainer2/HBoxContainer4"]
texture_filter = 1
layout_mode = 2
texture = SubResource("AtlasTexture_nu8xg")
stretch_mode = 5

[node name="Power" type="Label" parent="MarginContainer2/VBoxContainer2/HBoxContainer4"]
modulate = Color(0, 0, 0, 1)
layout_mode = 2
text = "Power:
"

[node name="DecreasePower" type="TextureButton" parent="MarginContainer2/VBoxContainer2/HBoxContainer4"]
texture_filter = 1
layout_mode = 2
texture_normal = SubResource("AtlasTexture_tf8la")
texture_pressed = SubResource("AtlasTexture_507ia")
stretch_mode = 5

[node name="IncreasePower" type="TextureButton" parent="MarginContainer2/VBoxContainer2/HBoxContainer4"]
layout_mode = 2
texture_normal = SubResource("AtlasTexture_2wnuv")
texture_pressed = SubResource("AtlasTexture_b0tfx")
stretch_mode = 5

[connection signal="pressed" from="MarginContainer2/VBoxContainer2/HBoxContainer/DecreaseHealth" to="." method="_on_decrease_health_pressed"]
[connection signal="pressed" from="MarginContainer2/VBoxContainer2/HBoxContainer/IncreaseHealth" to="." method="_on_increase_health_pressed"]
[connection signal="pressed" from="MarginContainer2/VBoxContainer2/HBoxContainer2/DecreaseStamina" to="." method="_on_decrease_stamina_pressed"]
[connection signal="pressed" from="MarginContainer2/VBoxContainer2/HBoxContainer2/IncreaseStamina" to="." method="_on_increase_stamina_pressed"]
[connection signal="pressed" from="MarginContainer2/VBoxContainer2/HBoxContainer3/DecreaseMana" to="." method="_on_decrease_mana_pressed"]
[connection signal="pressed" from="MarginContainer2/VBoxContainer2/HBoxContainer3/IncreaseMana" to="." method="_on_increase_mana_pressed"]
[connection signal="pressed" from="MarginContainer2/VBoxContainer2/HBoxContainer4/DecreasePower" to="." method="_on_decrease_power_pressed"]
[connection signal="pressed" from="MarginContainer2/VBoxContainer2/HBoxContainer4/IncreasePower" to="." method="_on_increase_power_pressed"]
